--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 	<meta content=»width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover» name=»viewport» />
-	<title>Document</title>
+	<title>Сoca-Cola Stories</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Oswald&display=swap&subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
